0.7.9+
    added sort options #87 #37 #23
    completed russian translation ru.po
    smart size display for free space and tasks closes #115
    case insensitive sort detect all created files #119
    fix Skip All in overwrite query
    added configure option --disable-pixmaps to install icons to share/icons
0.7.9:  2012-07-13:
    new threading for tasks
    network filesystem lag issues improved
    no file change detection on non-block filesystems
    timeout size calc after 5 sec
    don't calc total size of files to delete for speed improvement
    close copy read file on error
    handle progress gt 100%
    remove deadlock on quick dir change
    tforsman new swedish translation partially completed (40%)
    jpfleury updated french translation
    task manager Path column renamed Folder
    ellipsize Folder, Item, To task manager columns
    always enable Root submenu in devices
    set font new/rename file dialogs Target Template entries
    give errors accessing directories
    verbose tar extract/create
    fix for urxvtc #106
    check non-zero size before thumbnail scale (pixbuf in #107)
    run update-desktop-database; mime docs
0.7.8   2012-06-16:
    use/update mimeapps.list over defaults.list closes #71
    added design mode on mime apps opens MIME menu
    deprecated MimeType x-directory removed from spacefm desktop files
    new archive save dialog uses literal filename and extension fixes #82
    accept options in terminal program setting
    added user manual MIME Menu section
    accept network urls
    mount iso files from Open context menu; auto-mount iso
    added Root|Edit udevil.conf to devices menu
    allow edit bookmark to network URL
    corrected Click runs executables pref not saved fixes #84
    auto-unmount removed media and devices
    support xfce terminal
    improve new file/folder/link dialog
    change deprecated gdk_pixbuf_ref to g_object_ref
    don't remove .gz file when extracting closes #90