@@ -5,6 +5,7 @@
     case insensitive sort detect all created files #119
     fix Skip All in overwrite query
     added configure option --disable-pixmaps to install icons to share/icons
+    new icons for faenza theme by Goran Simovic
 0.7.9:  2012-07-13:
     new threading for tasks
     network filesystem lag issues improved
